# tietajabot

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
fixtures/: request.json  updates.json
restaurant/: Cargo.toml
src/: lib.rs  main.rs
