[package]
name = "hello"
version = "0.1.0"
edition = "2018"
authors = ["Vesa Laakso <vesa@laakso.me>"]

[dependencies]
chrono = "0.4.7"
lambda_runtime = "0.2"
lambda_http = "0.1"
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
telegram-typings = "^3.6.1"
log = "0.4.7"
env_logger = "0.6.2"
